Update deploy workflow

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,8 +19,8 @@ jobs:
 
     - name: Copy files to VPS
       run: |
-        ssh -o StrictHostKeyChecking=no ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} "mkdir -p ~/fitfusionai-django"
-        scp -r . ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }}:~/fitfusionai-django
+        ssh -o StrictHostKeyChecking=no ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} "mkdir -p ~/fitfusionai-django-new"
+        scp -r . ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }}:~/fitfusionai-django-new
 
     - name: Build & Run Docker container on VPS
       run: |
@@ -38,13 +38,13 @@ jobs:
 
           export GROQ_API_KEY="${{ secrets.GROQ_API_KEY }}"
 
-          cd ~/fitfusionai-django
-          docker stop fitfusionai-django || true
-          docker rm fitfusionai-django || true
+          cd ~/fitfusionai-django-new
+          docker stop fitfusionai-django-new || true
+          docker rm fitfusionai-django-new || true
 
-          docker build -t fitfusionai-django .
+          docker build -t fitfusionai-django-new .
 
-          docker run -d -p 8000:8000 --name fitfusionai-django \
+          docker run -d -p 8000:8000 --name fitfusionai-django-new \
             -e DB_USER="$DB_USER" \
             -e DB_PASSWORD="$DB_PASSWORD" \
             -e DB_HOST="$DB_HOST" \
@@ -55,7 +55,7 @@ jobs:
             -e STRIPE_SECRET_KEY="$STRIPE_SECRET_KEY" \
             -e STRIPE_WEBHOOK_SECRECT="$STRIPE_WEBHOOK_SECRECT" \
             -e GROQ_API_KEY="$GROQ_API_KEY" \
-            fitfusionai-django
+            fitfusionai-django-new
         EOF
       env:
         DB_USER: ${{ secrets.DB_USER }}
